--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     {% include head.html %}
 
   </head>
-  <body>
+  <body style="background-image: url('{{ '/' | prepend: site.baseurl | prepend: site.url }}assets/img/arab-bg.jpg');">
 
     <div class="arabic-wrapper">
       {% include homepage/header.html %}
