--- a/assets/css/3-modules/homepage/_layout.scss
+++ b/assets/css/3-modules/homepage/_layout.scss
@@ -1,7 +1,7 @@
 // LAYOUTS
 body {
   background: {
-    image: url('/assets/img/arab-bg.jpg');
+    // image: url('/assets/img/arab-bg.jpg');
     repeat: repeat;
     position: center center;
     size: auto;
