--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,18 @@
     <div class="arabic-wrapper">
       {% include homepage/header.html %}
 
-      <div id="content">
+      <div id="content"{% if page.url == '/' %} class="homepage"{% endif %}>
         {{ content }}
       </div>
 
       {% include homepage/footer.html %}
+
+      {% if page.url != '/' %}
+      <div class="disqus-wrapper">
+        <h3>Let's Disquss!!</h3>
+        {% include disqus-comments.html %}
+      </div>
+      {% endif %}
     </div>
 
     <noscript>Please enable JavaScript!</noscript>
