--- a/assets/css/3-modules/homepage/_layout.scss
+++ b/assets/css/3-modules/homepage/_layout.scss
@@ -64,6 +64,7 @@ body {
   padding: 5px;
   margin: 0 0 10px 0;
   h1, p {padding: 0; margin: 0;}
+  &.homepage {padding: 10px;}
 }
 
 #footer {
@@ -77,6 +78,13 @@ body {
       text-decoration: underline;
     }
   }
+}
+
+.disqus-wrapper {
+  @extend #footer;
+  border-color: #3498db;
+  padding: 10px;
+  h3 {margin: 10px;}
 }
 
 
