--- a/_includes/homepage/header.html
+++ b/_includes/homepage/header.html
@@ -1,8 +1,8 @@
 
-<div id="header"><a href="/"><img src="{{ '/' | prepend: site.baseurl | prepend: site.url }}assets/img/arab-logo.jpg"/></a>
+<div id="header"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}"><img src="{{ '/' | prepend: site.baseurl | prepend: site.url }}assets/img/arab-logo.jpg"/></a>
   <div class="nav">
     <ul>
-      <li><a href="/">Home</a></li>
+      <li><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">Home</a></li>
     </ul>
   </div>
 </div>
