--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,13 @@
     <div class="arabic-wrapper">
       {% include homepage/header.html %}
 
-      <div id="content"{% if page.url == '/' %} class="homepage"{% endif %}>
+      <div id="content"{% if page.url == '{{ '/' | prepend: site.baseurl | prepend: site.url }}' %} class="homepage"{% endif %}>
         {{ content }}
       </div>
 
       {% include homepage/footer.html %}
 
-      {% if page.url != '/' %}
+      {% if page.url != '{{ '/' | prepend: site.baseurl | prepend: site.url }}' %}
       <div class="disqus-wrapper">
         <h3>Let's Disquss!!</h3>
         {% include disqus-comments.html %}
