--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,3 +14,5 @@
     <link rel="stylesheet" type="text/css" href="{{ "/assets/css/app.css" | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}"> -->
+
+    {% include google-analytics.html %}
