--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,4 +1,4 @@
-{% if site.url and site.baseurl %}
+{% if site.url %}
 <!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
