add smtg imptnt

--- a/_includes/jsLiquid.html
+++ b/_includes/jsLiquid.html
@@ -2,20 +2,13 @@
   <script>
     $(document).keydown(function(e){
       if (e.keyCode == 37) {
-        window.location.href = "{{ page.next.url }}";
+        window.location.href = "{{ '/' | prepend: site.baseurl | prepend: site.url }}{{ page.next.url }}";
         return false;
       }
       if (e.keyCode == 39) {
-        window.location.href = "{{ page.previous.url }}";
+        window.location.href = "{{ '/' | prepend: site.baseurl | prepend: site.url }}{{ page.previous.url }}";
         return false;
       }
     });
-  </script>
-{% endif %}
-{% if page.url == {{ '/' | prepend: site.baseurl | prepend: site.url }} %}
-  <script>
-    if (window.location.href === '{% if site.url %}{{ site.url }}{% else %}{{ site.local }}{% endif %}/#submitted') {
-      $('#submitted').fadeIn();
-    }
   </script>
 {% endif %}
