--- a/_includes/jsLiquid.html
+++ b/_includes/jsLiquid.html
@@ -1,12 +1,12 @@
-{% if page.url != {{ '/' | prepend: site.baseurl | prepend: site.url }} %}
+{% if site.url and site.baseurl }} %}
   <script>
     $(document).keydown(function(e){
       if (e.keyCode == 37) {
-        window.location.href = "{{ '/' | prepend: site.baseurl | prepend: site.url }}{{ page.next.url }}";
+        window.location.href = "{{ '' | prepend: site.baseurl | prepend: site.url }}{{ page.next.url }}";
         return false;
       }
       if (e.keyCode == 39) {
-        window.location.href = "{{ '/' | prepend: site.baseurl | prepend: site.url }}{{ page.previous.url }}";
+        window.location.href = "{{ '' | prepend: site.baseurl | prepend: site.url }}{{ page.previous.url }}";
         return false;
       }
     });
